--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import com.sun.org.apache.xalan.internal.xsltc.cmdline.Compile
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
@@ -12,4 +14,8 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+//…Ë÷√±‡¬Î
+tasks.withType(Compile) {
+    options.encoding = "UTF-8"
 }
