--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <uses-sdk android:minSdkVersion="10" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -25,6 +26,7 @@
         <activity android:name=".SuolueDisplayActivity"></activity>
         <activity android:name=".PingPuActivity"></activity>
         <activity android:name=".videoPlayer"></activity>
+        <activity android:name=".camera"></activity>
     </application>
 
 </manifest>
