--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 10
+    compileSdkVersion 15
     buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.yl.picture"
-        minSdkVersion 10
-        targetSdkVersion 10
+        minSdkVersion 11
+        targetSdkVersion 15
     }
 
     buildTypes {
@@ -16,4 +16,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+}
+dependencies {
+    compile 'com.android.support:support-v4:18.0.0'
+    compile files('libs/universal-image-loader-1.9.0.jar')
 }
